--- a/java/log-levels/build.gradle
+++ b/java/log-levels/build.gradle
@@ -10,6 +10,7 @@ dependencies {
   testImplementation platform("org.junit:junit-bom:5.10.0")
   testImplementation "org.junit.jupiter:junit-jupiter"
   testImplementation "org.assertj:assertj-core:3.15.0"
+    testImplementation 'junit:junit:4.13.1'
 }
 
 test {
